Small update
Started working on the document generation module

Done:
- Set up the placeholder list
- Set up template access

Pending:
- Document styling
- Testing